# zhaoming-embedded

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_MEMORY.md  README.md  SECURITY.md  book.toml
ai-coding-skill/: SKILL.md
ai-coding-skill/references/: architecture.md  clean-code.md  code-style.md  design-patterns.md  hardware-interaction.md  memory-safety.md  safety-checklist.md
book/: README.md  SUMMARY.md  preface.md  尾声-致读者.md
book/00-序曲/: 00-五分钟看见OOP.md
book/01-封装/: 01-三个LED三份代码.md  02-同事改了一行.md  03-手搓class.md  04-数据归位.md  05-HAL映射.md
book/02-继承/: 06-代码一半重复.md
book/03-多态/: 07-写死的函数怎么换.md  08-把号码给别人拨.md  09-ops操作表.md  10-ops放进对象.md  11-多态完整图景.md
book/04-工程威力/: 12-向上转型.md  13-container_of.md  14-纯虚与抽象类.md  15-Platform抽象.md  16-Linux不难.md  17-initcall.md  18-全书地图.md
book/05-工业实战/: 19-主控案例.md  20-子控案例.md
book/附录/: A-三大开源对照.md  B-STM32完整工程.md  C-Linux完整工程.md  D-配套代码索引.md
industrial/: README.md
industrial-linux/: README.md
industrial-linux/ch20-demo2-libgpiod/: Makefile  blink_libgpiod.c
industrial-linux/ch20-demo3-gdb/: README.md
industrial-linux/ch20-demo4-initcall/: trace_initcall.sh
industrial-linux/ch20-leds-status/: Makefile  README.md  leds-status-overlay.dts  leds-status.c
industrial-zephyr/: CMakeLists.txt  README.md  prj.conf
industrial-zephyr/boards/: stm32f4_disco.overlay
industrial-zephyr/src/: main_demo1_4led.c  main_demo2_overlay.c  main_demo3_container.c  main_demo4_enosys.c
oop-in-c/: README.md
practice/: LEARNING_PLAN.md  README.md
setup/: README.md
source-insight/: 兆鸣_SI4_配置.xml
(+500 files in other folders)
